tests/invalid/proc_without_return.lang
proc return_int() i32 {

}
